--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 			href="https://framerusercontent.com/images/Qdi1VfEDR6sdQ5o88h3f9A2soJc.png"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Sahil Mengji</title>
+		<title>Aaditya Yadav</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
